# aoc2018

./: .clang-tidy  CMakeLists.txt  aoc2018.sln  aoc2018.vcxproj  aoc2018.vcxproj.filters
day01/: day01.cpp  day01.vcxproj  day01.vcxproj.filters
day01/x64/Debug/: day01.exe.recipe  day01.ilk  vc143.idb
day01/x64/Debug/day01.tlog/: CL.command.1.tlog  CL.read.1.tlog  CL.write.1.tlog  Cl.items.tlog  day01.lastbuildstate  link.command.1.tlog  link.read.1.tlog  link.secondary.1.tlog  link.write.1.tlog
day02/: day02.cpp  day02.vcxproj  day02.vcxproj.filters
day02/x64/Debug/: day02.exe.recipe  day02.ilk  vc143.idb
day02/x64/Debug/day02.tlog/: CL.command.1.tlog  CL.read.1.tlog  CL.write.1.tlog  Cl.items.tlog  link.command.1.tlog  link.read.1.tlog  link.secondary.1.tlog  (+1 more)
day03/: day03.cpp  day03.vcxproj  day03.vcxproj.filters
day03/x64/Debug/: day03.exe.recipe  day03.ilk  vc143.idb
day04/: day04  day04.cpp  day04.vcxproj
day04/x64/Debug/: day04.exe.recipe  vc143.idb
day05/: day05.cpp  day05.vcxproj  day05.vcxproj.filters
day05/x64/Debug/: day05.exe.recipe  day05.ilk  vc143.idb
day06/: day06  day06.cpp
day06/day06.dSYM/Contents/: Info.plist
day07/: day07.cpp
day08/: day08.cpp
day09/: day09.cpp
day10/: day10.cpp
day11/: day11.cpp
day12/: day12.cpp
day13/: day13.cpp
day14/: day14.cpp
day15/: day15.cpp  day15trash.cpp  day15version1.cpp
day16/: day16.cpp
day4/: day4.vcxproj
utilslib/: utilslib.cpp  utilslib.h  utilslib.vcxproj  utilslib.vcxproj.filters
x64/Debug/: HelperLib.lib  helper.idb  helperLib.idb  utilslib.idb  utilslib.lib
(+36 files in other folders)
